# agstack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  agstack-guide.skills  pyproject.toml
agstack/: contexts.py  decorators.py  events.py  registry.py
agstack-guide/: SKILL.md
agstack-guide/references/: agents.md  flows.md  registry.md  tools.md
agstack/config/: logger.py
agstack/fastapi/: __init__.py  middleware.py
agstack/infra/db/: __init__.py
agstack/infra/es/: __init__.py
agstack/infra/kg/: __init__.py
agstack/infra/mq/: __init__.py
agstack/llm/: client.py
agstack/llm/flow/: __init__.py  agent.py  context.py  event.py  flow.py  registry.py  sandbox.py  tool.py
agstack/llm/flow/nodes/: __init__.py  agent_node.py  base.py  detect_node.py  llm_chat_node.py  llm_embed_node.py  llm_rerank_node.py  python_node.py  subflow_node.py  switch_node.py  tool_node.py
agstack/security/: casbin.py  crypt.py
docs/: DEVELOPMENT_RULES.md  USAGE_GUIDE.md
tests/: test_flow_io.py  test_flow_switch_subflow.py
