[project]
name = "agstack"
version = "1.2.3"
description = "Production-ready toolkit for building FastAPI and LLM applications"
readme = "README.md"
license = "MIT"
authors = [
    { name = "XtraVisions", email = "gitadmin@xtravisions.com" },
    { name = "Chen Hao", email = "chenhao@xtravisions.com" }
]
maintainers = [
    { name = "XtraVisions", email = "gitadmin@xtravisions.com" },
    { name = "Chen Hao", email = "chenhao@xtravisions.com" }
]
keywords = [
    "fastapi",
    "llm",
    "agents",
    "ai",
    "infrastructure",
    "framework",
    "casbin",
    "openai",
    "logging",
    "configuration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.1",
    "asyncpg>=0.30.0",
    "elasticsearch[async]>=9.3.0",
    "fastapi>=0.133.1",
    "jwcrypto>=1.5.6",
    "loguru>=0.7.3",
    "nebula3-python>=3.8.3",
    "openai>=2.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pycasbin>=2.8.0",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlobjects>=1.2.5",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.407",
    "ruff>=0.15.5",
    "setuptools>=82.0.0",
]

#[[tool.uv.index]]
#name = "tsinghua"
#url = "https://mirrors.aliyun.com/pypi/simple"
#default = true

[tool.pyright]
include = ["app", "depends"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
reportMissingImports = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "UP046", # disable none pep695 generic class
    "UP047", # disable none pep695 generic function
    "UP035", # disable using `type` instead `types.Type`
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
#force-single-line = true
known-first-party = ["common"]
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
